WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282555
Wikipedia WebM sample has wrong aspect ratio
https://bugs.webkit.org/show_bug.cgi?id=282555
Summary
Wikipedia WebM sample has wrong aspect ratio
Jer Noble
Reported
2024-11-04 12:58:18 PST
Wikipedia WebM sample has wrong aspect ratio
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-04 12:58:27 PST
<
rdar://problem/139229383
>
Jer Noble
Comment 2
2024-11-04 13:01:40 PST
Pull request:
https://github.com/WebKit/WebKit/pull/36143
EWS
Comment 3
2024-11-21 02:15:11 PST
Committed
286898@main
(29decfdc29bb): <
https://commits.webkit.org/286898@main
> Reviewed commits have been landed. Closing PR #36143 and removing active labels.
EWS
Comment 4
2024-12-04 12:15:19 PST
Committed
283286.561@safari-7620-branch
(781e60256204): <
https://commits.webkit.org/283286.561@safari-7620-branch
> Reviewed commits have been landed. Closing PR #2370 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug