Wikipedia WebM sample has wrong aspect ratio https://bugs.webkit.org/show_bug.cgi?id=282555 rdar://139229383

Reviewed by Jean-Yves Avenard.

285809@main fixed aspect ratio of webm files whose source pixels were 1:1,
but the resulting pixel-aspect-ratio setting was incorrect for files with
non-1:1 sources and a sample-aspect-ratio setting.

* LayoutTests/media/content/test-par-16-9.webm: Added.
* LayoutTests/media/media-vp9-dar-webm-expected.txt:
* LayoutTests/media/media-vp9-dar-webm.html:
* LayoutTests/media/media-vp9-sar-webm-expected.txt: Added.
* LayoutTests/media/media-vp9-sar-webm.html: Added.
* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::createFormatDescriptionFromTrackInfo):

Canonical link: https://commits.webkit.org/286898@main